# splat_renderer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
cmake/: StringifyShaders.cmake
dependencies/glad/glad/: glad.h
libs/glad/glad/: glad.h
src/: camera.h  glad.c  main.cpp  utils.h
src/shaders/: ewasplat.vert  final.frag  fullscreenquad.vert  splat.frag  splat.vert  splatcount.frag  visibility.frag  visibility.vert
tests/: test.py
